--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <li><a>Team</a></li>
                 <li><a>Contact</a></li>
             </ul>
-            <p class="legal">© 2023 All rights reserved</p>
+            <p class="legal">© 2024 Todos os direitos reservados</p>
         </section>
     </footer>
 
