--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                     <!-- The slideshow/carousel -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="img/img11.png" alt="Los Angeles" class="d-block w-100 ">
+                            <img src="img/foto.2.png" alt="Los Angeles" class="d-block w-100 ">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/img11.png" alt="Chicago" class="d-block w-100 ">
+                            <img src="img/foto.2.png" alt="Chicago" class="d-block w-100 ">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/img11.png" alt="New York" class="d-block w-100">
+                            <img src="img/foto.2.png" alt="New York" class="d-block w-100">
                         </div>
                     </div>
 
@@ -99,13 +99,13 @@
                     <!-- The slideshow/carousel -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="img/img11.png" alt="Los Angeles" class="d-block w-100 ">
+                            <img src="img/Captura de tela 2023-12-16 105014.png" alt="Los Angeles" class="d-block w-100 ">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/img11.png" alt="Chicago" class="d-block w-100 ">
+                            <img src="img/foto.sympla.jpeg" alt="Chicago" class="d-block w-100 ">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/img11.png" alt="New York" class="d-block w-100">
+                            <img src="img/fotoprogramando.jpeg" alt="New York" class="d-block w-100">
                         </div>
                     </div>
 
